# slashdot_ml_workshop

./: .gitignore  README.md  pyproject.toml
code/: README.md  pyproject.toml
code/notebooks/: 01_numbers_and_functions.ipynb  05_decision_trees_boosting.ipynb
code/src/ml_workshop/: __init__.py
code/src/ml_workshop/data/: __init__.py  mnist.py
code/src/ml_workshop/models/: cnn.py
code/src/ml_workshop/training/: __init__.py  trainer.py
notebooks/: 01_numbers_and_functions.ipynb  02_calculus_foundations.ipynb  03_neural_network_basics.ipynb  04_training_mnist.ipynb
presentation/day_0/: main.tex  minimal.tex  test.tex
presentation/day_0/sections/: 01_numbers.tex  02_reals_complex.tex  03_functions.tex  04_limits.tex  05_differentiation.tex  06_integration.tex  07_graph_theory.tex  08_python_setup.tex  09_neural_intro.tex  10_neural_arch.tex  11_forward_prop.tex  12_loss_functions.tex  13_backprop.tex  14_optimization.tex  15_regularization.tex  16_decision_trees.tex  17_boosting.tex  18_stat_learning.tex  19_kl_divergence.tex  20_mnist.tex  21_training_pipeline.tex
src/ml_workshop/: main.py
src/ml_workshop/models/: __init__.py  mlp.py
src/ml_workshop/visualization/: __init__.py  plots.py
